--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
+@import url("./blocks/header.css");
+@import url("./blocks/icon.css");
+@import url("./blocks/nav.css");
+@import url('./blocks/intro.css');
+@import url("./blocks/cards.css");
+@import url("./blocks/card.css");
+@import url("./blocks/project.css");
+@import url("./blocks/category.css");
+@import url("./blocks/footer.css");
+
+@media (max-width: 3000px) {
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ margin: 15vh 0 0 0;
+ font-family: 'Montserrat', sans-serif;
+ text-align: center;
+ background-color: #457F85;
+ padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  min-height: 70vh;
+  margin: auto;
+}
+}
+
+@media (max-width: 720px) {
+  body {
+    margin: 0 0 0 20vw;
+  }
 }
